--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".EditLogbook"
+            android:exported="false" />
+        <activity
             android:name=".ViewPengajuanKP"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".DonePengajuanKP"
             android:exported="false" />
@@ -33,7 +30,13 @@
             android:exported="false" />
         <activity
             android:name=".PengajuanKP"
-            android:exported="false"></activity>
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".HomeActivity"
             android:exported="false"
@@ -45,7 +48,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.Lunch"></activity>
+            android:theme="@style/Theme.Lunch" />
 
         <meta-data
             android:name="preloaded_fonts"
