--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -15,11 +14,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lunch"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".InputDataSeminar2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".InputDataSeminar1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".InformasiSeminarKpActivity"
+            android:exported="false" />
         <activity
             android:name=".HomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.LunchNoActionBar" />/>
+            android:theme="@style/Theme.LunchNoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:exported="false"
